# NS-C

./: .gitignore  CONTEXT_HISTORY.md  README.md  docker-compose.yml
backend/: .example.env  .gitignore  CLAUDE.md  Dockerfile  PROJECT_INDEX.md  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  utils.py
backend/app/api/v1/: __init__.py  csv_import.py  dashboard.py  email_templates.py  escalation.py
backend/app/models/: __init__.py  account.py  base.py  contact.py  email_template.py  invoice.py  invoice_aging_snapshot.py
backend/app/repositories/: __init__.py  account.py  base.py  email_template.py  invoice.py  invoice_aging_snapshot.py
backend/app/schemas/: __init__.py  csv_import.py  email_template.py  escalation.py
backend/app/services/: __init__.py  csv_import_service.py  email_template_service.py  escalation_service.py
backend/docs/: AI_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_REFERENCE.md  DEVELOPER_GUIDE.md  OPERATIONS.md
backend/docs/examples/: README.md
backend/docs/examples/api_usage/: curl_examples.sh  escalation_request.json  python_client.py
backend/docs/examples/csv_templates/: error_examples.csv  minimal_aging_data.csv  sample_aging_data.csv
backend/docs/examples/email_templates/: escalation_level_1.json  escalation_level_2.json  escalation_level_3.json
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_invoice_aging_models.py  003_add_email_templates.py
frontend-files/: README.md
(+24 files in other folders)
