[project]
name = "noodle-apps-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "aiosmtplib>=4.0.1",
    "python-multipart>=0.0.20",
]
